fix dark mode abstract

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -796,6 +796,7 @@ footer.sticky-bottom {
       div.abstract.hidden.open {
         border: none;
         background-color: #e8f4fd;
+        color: #1a1a2e;
       }
     }
   }
